[gd_scene load_steps=6 format=2]

[ext_resource path="res://Projects/Pokemon/PF/assets/sprites/abra.png" type="Texture" id=1]
[ext_resource path="res://Projects/Pokemon/PF/scenes/CatchGame.gd" type="Script" id=2]
[ext_resource path="res://Projects/Pokemon/PF/assets/backgrounds/background_pokemon.jpg" type="Texture" id=3]
[ext_resource path="res://Projects/Pokemon/PF/assets/music/battle_music.mp3" type="AudioStream" id=4]
[ext_resource path="res://Projects/Pokemon/PF/resources/themes/custom-theme.tres" type="Theme" id=5]

[node name="CatchGame" type="Node"]
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -48.0
margin_bottom = 4.0
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 96.0
theme = ExtResource( 5 )
text = "A wild {pokemon} appeared!"
align = 1
valign = 1

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 512, 232 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="ProgressBar" type="ProgressBar" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 100.0
margin_top = 113.0
margin_right = -100.0
margin_bottom = 148.0
theme = ExtResource( 5 )

[node name="Tween" type="Tween" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="GridContainer" type="GridContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = -93.0
margin_right = -100.0
margin_bottom = -24.0
custom_constants/hseparation = 100
columns = 2

[node name="KeepGoing" type="Button" parent="GridContainer"]
modulate = Color( 0.482353, 0.8, 1, 1 )
margin_right = 362.0
margin_bottom = 33.0
size_flags_horizontal = 3
theme = ExtResource( 5 )
text = "Keep Going"

[node name="GoToMenu" type="Button" parent="GridContainer"]
modulate = Color( 0.882353, 0.862745, 0.854902, 1 )
margin_left = 462.0
margin_right = 824.0
margin_bottom = 33.0
size_flags_horizontal = 3
theme = ExtResource( 5 )
text = "Go To Menu"

[connection signal="pressed" from="GridContainer/KeepGoing" to="." method="_on_KeepGoing_pressed"]
[connection signal="pressed" from="GridContainer/GoToMenu" to="." method="_on_GoToMenu_pressed"]
